--- a/Huya_Offical/MainWindow.xaml
+++ b/Huya_Offical/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Image HorizontalAlignment="Left" Height="58" Margin="87,94,0,0" VerticalAlignment="Top" Width="129"/>
+
     </Grid>
 </Window>
